tests/baselines/reference/multipleExportAssignments.errors.txt
==== tests/cases/compiler/multipleExportAssignments.ts (3 errors) ====
    interface connectModule {
        (res, req, next): void;
    }
    interface connectExport {
        use: (mod: connectModule) => connectExport;
        listen: (port: number) => void;
    }
    var server: {
        ~~~~~~~~~
        ~~~~~~~~~
        (): connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~
        test1: connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        test2(): connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2027: Exported variable 'server' has or is using private type 'connectModule'.
    ~
!!! error TS2027: Exported variable 'server' has or is using private type 'connectExport'.
    export = server;
    export = connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1065: Module cannot have multiple export assignments.
     
    